[#850] Run service containers with OpenJDK 11.
Fixes #850.

Signed-off-by: Kai Hudalla <kai.hudalla@bosch-si.com>