@@ -63,11 +63,13 @@
                     <cmd>
                       <exec>
                         <arg>java</arg>
-                        <arg>-XX:+UnlockExperimentalVMOptions</arg>
-                        <arg>-XX:+UseCGroupMemoryLimitForHeap</arg>
+                        <arg>--illegal-access=permit</arg>
                         <arg>-Dvertx.cacheDirBase=/tmp</arg>
-                        <arg>-jar</arg>
+                        <arg>-Dloader.home=/opt/hono</arg>
+                        <arg>-Dloader.path=extensions</arg>
+                        <arg>-cp</arg>
                         <arg>/opt/hono/${project.artifactId}-${project.version}-${classifier.spring.boot.artifact}.jar</arg>
+                        <arg>org.springframework.boot.loader.PropertiesLauncher</arg>
                       </exec>
                     </cmd>
                     <assembly>
