@@ -61,6 +61,11 @@
                 <image>
                   <build>
                     <from>${java-base-image.name}</from>
+                    <labels>
+                      <implemented.api.1>Tenant</implemented.api.1>
+                      <implemented.api.2>Device Registration</implemented.api.2>
+                      <implemented.api.3>Credentials</implemented.api.3>
+                    </labels>
                     <ports>
                       <port>5671</port>
                       <port>5672</port>
@@ -68,11 +73,10 @@
                       <port>8443</port>
                       <port>${vertx.health.port}</port>
                     </ports>
-                    <entryPoint>
+                    <cmd>
                       <exec>
                         <arg>java</arg>
-                        <arg>-XX:+UnlockExperimentalVMOptions</arg>
-                        <arg>-XX:+UseCGroupMemoryLimitForHeap</arg>
+                        <arg>--illegal-access=permit</arg>
                         <arg>-Dvertx.cacheDirBase=/tmp</arg>
                         <arg>-Dloader.home=/opt/hono</arg>
                         <arg>-Dloader.path=extensions</arg>
@@ -80,7 +84,7 @@
                         <arg>/opt/hono/${project.artifactId}-${project.version}-${classifier.spring.boot.artifact}.jar</arg>
                         <arg>org.springframework.boot.loader.PropertiesLauncher</arg>
                       </exec>
-                    </entryPoint>
+                    </cmd>
                     <assembly>
                       <mode>dir</mode>
                       <basedir>/</basedir>
